# edu_camera

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/edu_camera/analyzer/: metric_latency.hpp  metric_link_quality.hpp  metric_packet_loss.hpp  metric_rssi.hpp  metric_snr.hpp  wifi_metric.hpp  wifi_quality_monitor.hpp
include/edu_camera/camera/: video_camera.hpp  video_camera_4linux2.hpp  video_camera_opencv.hpp
include/edu_camera/video_stream/: codec.hpp  gstream_pipeline.hpp  network_metric.hpp  quality_settings.hpp  video_gstream.hpp  video_stream.hpp  video_stream_client.hpp  video_stream_server.hpp
src/lib/: CMakeLists.txt
src/lib/analyzer/: CMakeLists.txt  metric_latency.cpp  metric_link_quality.cpp  metric_packet_loss.cpp  metric_rssi.cpp  metric_snr.cpp  wifi_metric.cpp  wifi_quality_monitor.cpp
src/lib/camera/: CMakeLists.txt  video_camera.cpp  video_camera_opencv.cpp
src/lib/video_stream/: CMakeLists.txt  gstream_pipeline.cpp  video_gstream.cpp  video_stream_client.cpp  video_stream_server.cpp
src/node/: CMakeLists.txt  camera_node.cpp  wifi_network_analyzer_node.cpp
srv/: SubscribeToStream.srv
